--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "cloudinary": "^2.0.0",
+    "cloudinary-react": "^1.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.20.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
