--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.0.0",
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.5",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-env-compatible": "^2.0.1"
   }
 }
