--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.0.0",
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.0.1",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -28,6 +29,7 @@
     "@rollup/plugin-replace": "^5.0.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.19",
+    "@types/rollup": "^0.54.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -37,5 +39,13 @@
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vite-plugin-env-compatible": "^2.0.1"
+  },
+  "rollup": {
+    "plugins": [
+      {
+        "name": "@rollup/plugin-replace",
+        "preventAssignment": true
+      }
+    ]
   }
 }
