--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.0",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "transition-style": "^0.1.3"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.5",
